@@ -1,5 +1,11 @@
 2007-05-27  Christian Persch  <chpe@gnome.org>
 
+	* embed/mozilla/mozilla-embed-single.cpp:
+
+	nsIPasswordManager doesn't exist on trunk anymore.
+
+2007-05-27  Christian Persch  <chpe@gnome.org>
+
 	* lib/ephy-stock-icons.c: (ephy_stock_icons_init):
 
 	No need to make this data static.
